--- a/config.json
+++ b/config.json
@@ -1,3 +1,4 @@
 {
-    "TOKEN":"MTA0MDk3MzIwOTAxODg0NzI3Mg.GxF1Z5.415OyqLkernRTAkqlmkK2kRN45InYECIuzNYgY"
+    YARRAMI YE REXO YÖNETİM SUNARR 
+     iG : bne.ardaaa.01
 }
